{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 144,
  "lineage": "6b15c621-a928-4314-9e4a-b8b37eca99d7",
  "resources": [
    {
      "module": "module.dev_infra1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:internet-gateway/igw-00ece33092fd7a62b",
            "id": "igw-00ece33092fd7a62b",
            "owner_id": "754683575807",
            "tags": {
              "Name": "dev_infra1-igw"
            },
            "tags_all": {
              "Name": "dev_infra1-igw"
            },
            "vpc_id": "vpc-028f9ebb293d8359b"
          },
          "dependencies": [
            "module.dev_infra1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:route-table/rtb-01d2db59e8df04c30",
            "id": "rtb-01d2db59e8df04c30",
            "owner_id": "754683575807",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ece33092fd7a62b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_infra1-pub-rt"
            },
            "tags_all": {
              "Name": "dev_infra1-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-028f9ebb293d8359b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_infra1.aws_internet_gateway.igw",
            "module.dev_infra1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:route-table/rtb-0004396ceec274163",
            "id": "rtb-0004396ceec274163",
            "owner_id": "754683575807",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev_infra1-pvt-rt"
            },
            "tags_all": {
              "Name": "dev_infra1-pvt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-028f9ebb293d8359b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_infra1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sn_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ed6f4cc77bdb7f5",
            "route_table_id": "rtb-01d2db59e8df04c30",
            "subnet_id": "subnet-09cb4b8cfd081eb56"
          },
          "dependencies": [
            "module.dev_infra1.aws_internet_gateway.igw",
            "module.dev_infra1.aws_route_table.pub",
            "module.dev_infra1.aws_subnet.pub_sn",
            "module.dev_infra1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07849297fa9fa3a89",
            "route_table_id": "rtb-01d2db59e8df04c30",
            "subnet_id": "subnet-08185b618b3e24d70"
          },
          "dependencies": [
            "module.dev_infra1.aws_internet_gateway.igw",
            "module.dev_infra1.aws_route_table.pub",
            "module.dev_infra1.aws_subnet.pub_sn",
            "module.dev_infra1.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a32805cdb0350d2",
            "route_table_id": "rtb-01d2db59e8df04c30",
            "subnet_id": "subnet-0c7453555755c5a38"
          },
          "dependencies": [
            "module.dev_infra1.aws_internet_gateway.igw",
            "module.dev_infra1.aws_route_table.pub",
            "module.dev_infra1.aws_subnet.pub_sn",
            "module.dev_infra1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_sn_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e10751b1d973195f",
            "route_table_id": "rtb-0004396ceec274163",
            "subnet_id": "subnet-06e2c51a53ba0fbeb"
          },
          "dependencies": [
            "module.dev_infra1.aws_route_table.pvt",
            "module.dev_infra1.aws_subnet.pvt_sn",
            "module.dev_infra1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03300d2836418e06c",
            "route_table_id": "rtb-0004396ceec274163",
            "subnet_id": "subnet-0d0a12cab0bd6f77c"
          },
          "dependencies": [
            "module.dev_infra1.aws_route_table.pvt",
            "module.dev_infra1.aws_subnet.pvt_sn",
            "module.dev_infra1.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b8cd6be71fc9e36",
            "route_table_id": "rtb-0004396ceec274163",
            "subnet_id": "subnet-02930e5aa56afc51e"
          },
          "dependencies": [
            "module.dev_infra1.aws_route_table.pvt",
            "module.dev_infra1.aws_subnet.pvt_sn",
            "module.dev_infra1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:security-group/sg-0713afcaf2c118dad",
            "description": "Created by using TerraForm",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow OUt Bound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0713afcaf2c118dad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow In-Bound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev_infra1-sg_name",
            "name_prefix": "",
            "owner_id": "754683575807",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_infra1-sg"
            },
            "tags_all": {
              "Name": "dev_infra1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-028f9ebb293d8359b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_infra1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:subnet/subnet-09cb4b8cfd081eb56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cb4b8cfd081eb56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "754683575807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_infra1-pub-sn-1"
            },
            "tags_all": {
              "Name": "dev_infra1-pub-sn-1"
            },
            "vpc_id": "vpc-028f9ebb293d8359b"
          },
          "dependencies": [
            "module.dev_infra1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:subnet/subnet-08185b618b3e24d70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08185b618b3e24d70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "754683575807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_infra1-pub-sn-2"
            },
            "tags_all": {
              "Name": "dev_infra1-pub-sn-2"
            },
            "vpc_id": "vpc-028f9ebb293d8359b"
          },
          "dependencies": [
            "module.dev_infra1.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:subnet/subnet-0c7453555755c5a38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7453555755c5a38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "754683575807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_infra1-pub-sn-3"
            },
            "tags_all": {
              "Name": "dev_infra1-pub-sn-3"
            },
            "vpc_id": "vpc-028f9ebb293d8359b"
          },
          "dependencies": [
            "module.dev_infra1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:subnet/subnet-06e2c51a53ba0fbeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e2c51a53ba0fbeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "754683575807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_infra1-pvt-sn-1"
            },
            "tags_all": {
              "Name": "dev_infra1-pvt-sn-1"
            },
            "vpc_id": "vpc-028f9ebb293d8359b"
          },
          "dependencies": [
            "module.dev_infra1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:subnet/subnet-0d0a12cab0bd6f77c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0a12cab0bd6f77c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "754683575807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_infra1-pvt-sn-2"
            },
            "tags_all": {
              "Name": "dev_infra1-pvt-sn-2"
            },
            "vpc_id": "vpc-028f9ebb293d8359b"
          },
          "dependencies": [
            "module.dev_infra1.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:subnet/subnet-02930e5aa56afc51e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02930e5aa56afc51e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "754683575807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_infra1-pvt-sn-3"
            },
            "tags_all": {
              "Name": "dev_infra1-pvt-sn-3"
            },
            "vpc_id": "vpc-028f9ebb293d8359b"
          },
          "dependencies": [
            "module.dev_infra1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:vpc/vpc-028f9ebb293d8359b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02fb3941a43b4a13b",
            "default_route_table_id": "rtb-08d6e509cfc44f84b",
            "default_security_group_id": "sg-0d305e9404951e6d5",
            "dhcp_options_id": "dopt-0cac2d9b3006c660d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-028f9ebb293d8359b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d6e509cfc44f84b",
            "owner_id": "754683575807",
            "tags": {
              "Name": "dev_infra1-vpc"
            },
            "tags_all": {
              "Name": "dev_infra1-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.dev_infra2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:internet-gateway/igw-0ea78338c0b2ea14e",
            "id": "igw-0ea78338c0b2ea14e",
            "owner_id": "754683575807",
            "tags": {
              "Name": "dev_infra2-igw"
            },
            "tags_all": {
              "Name": "dev_infra2-igw"
            },
            "vpc_id": "vpc-078a97e9cf46f8ecb"
          },
          "dependencies": [
            "module.dev_infra2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:route-table/rtb-0c717bbcb0887fe05",
            "id": "rtb-0c717bbcb0887fe05",
            "owner_id": "754683575807",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea78338c0b2ea14e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_infra2-pub-rt"
            },
            "tags_all": {
              "Name": "dev_infra2-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-078a97e9cf46f8ecb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_infra2.aws_internet_gateway.igw",
            "module.dev_infra2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:route-table/rtb-03a98790e4a86c908",
            "id": "rtb-03a98790e4a86c908",
            "owner_id": "754683575807",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev_infra2-pvt-rt"
            },
            "tags_all": {
              "Name": "dev_infra2-pvt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-078a97e9cf46f8ecb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_infra2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sn_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0717b32e948a7f3a6",
            "route_table_id": "rtb-0c717bbcb0887fe05",
            "subnet_id": "subnet-03dcfb7821f4910e8"
          },
          "dependencies": [
            "module.dev_infra2.aws_internet_gateway.igw",
            "module.dev_infra2.aws_route_table.pub",
            "module.dev_infra2.aws_subnet.pub_sn",
            "module.dev_infra2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b11b7da35ec27b98",
            "route_table_id": "rtb-0c717bbcb0887fe05",
            "subnet_id": "subnet-0247fbd81974eba5a"
          },
          "dependencies": [
            "module.dev_infra2.aws_internet_gateway.igw",
            "module.dev_infra2.aws_route_table.pub",
            "module.dev_infra2.aws_subnet.pub_sn",
            "module.dev_infra2.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0046d7b88a6a782f5",
            "route_table_id": "rtb-0c717bbcb0887fe05",
            "subnet_id": "subnet-09aaa594ef05d351e"
          },
          "dependencies": [
            "module.dev_infra2.aws_internet_gateway.igw",
            "module.dev_infra2.aws_route_table.pub",
            "module.dev_infra2.aws_subnet.pub_sn",
            "module.dev_infra2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_sn_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066bceb48ae228c50",
            "route_table_id": "rtb-03a98790e4a86c908",
            "subnet_id": "subnet-00cf0c272feafe8c9"
          },
          "dependencies": [
            "module.dev_infra2.aws_route_table.pvt",
            "module.dev_infra2.aws_subnet.pvt_sn",
            "module.dev_infra2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0733c10e10236970b",
            "route_table_id": "rtb-03a98790e4a86c908",
            "subnet_id": "subnet-0e1a684ad854a50da"
          },
          "dependencies": [
            "module.dev_infra2.aws_route_table.pvt",
            "module.dev_infra2.aws_subnet.pvt_sn",
            "module.dev_infra2.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae62fac1d2a95fd1",
            "route_table_id": "rtb-03a98790e4a86c908",
            "subnet_id": "subnet-0afed07a3d05d6978"
          },
          "dependencies": [
            "module.dev_infra2.aws_route_table.pvt",
            "module.dev_infra2.aws_subnet.pvt_sn",
            "module.dev_infra2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:security-group/sg-01684e9e02c47d2b1",
            "description": "Created by using TerraForm",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow OUt Bound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01684e9e02c47d2b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow In-Bound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev_infra2-sg_name",
            "name_prefix": "",
            "owner_id": "754683575807",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_infra2-sg"
            },
            "tags_all": {
              "Name": "dev_infra2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-078a97e9cf46f8ecb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_infra2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:subnet/subnet-03dcfb7821f4910e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dcfb7821f4910e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "754683575807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_infra2-pub-sn-1"
            },
            "tags_all": {
              "Name": "dev_infra2-pub-sn-1"
            },
            "vpc_id": "vpc-078a97e9cf46f8ecb"
          },
          "dependencies": [
            "module.dev_infra2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:subnet/subnet-0247fbd81974eba5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0247fbd81974eba5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "754683575807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_infra2-pub-sn-2"
            },
            "tags_all": {
              "Name": "dev_infra2-pub-sn-2"
            },
            "vpc_id": "vpc-078a97e9cf46f8ecb"
          },
          "dependencies": [
            "module.dev_infra2.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:subnet/subnet-09aaa594ef05d351e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09aaa594ef05d351e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "754683575807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_infra2-pub-sn-3"
            },
            "tags_all": {
              "Name": "dev_infra2-pub-sn-3"
            },
            "vpc_id": "vpc-078a97e9cf46f8ecb"
          },
          "dependencies": [
            "module.dev_infra2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:subnet/subnet-00cf0c272feafe8c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cf0c272feafe8c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "754683575807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_infra2-pvt-sn-1"
            },
            "tags_all": {
              "Name": "dev_infra2-pvt-sn-1"
            },
            "vpc_id": "vpc-078a97e9cf46f8ecb"
          },
          "dependencies": [
            "module.dev_infra2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:subnet/subnet-0e1a684ad854a50da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1a684ad854a50da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "754683575807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_infra2-pvt-sn-2"
            },
            "tags_all": {
              "Name": "dev_infra2-pvt-sn-2"
            },
            "vpc_id": "vpc-078a97e9cf46f8ecb"
          },
          "dependencies": [
            "module.dev_infra2.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:subnet/subnet-0afed07a3d05d6978",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afed07a3d05d6978",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "754683575807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_infra2-pvt-sn-3"
            },
            "tags_all": {
              "Name": "dev_infra2-pvt-sn-3"
            },
            "vpc_id": "vpc-078a97e9cf46f8ecb"
          },
          "dependencies": [
            "module.dev_infra2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754683575807:vpc/vpc-078a97e9cf46f8ecb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-01913f7be7cdb6edf",
            "default_route_table_id": "rtb-04faf939476aacb95",
            "default_security_group_id": "sg-07810ad354fc416bc",
            "dhcp_options_id": "dopt-0cac2d9b3006c660d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-078a97e9cf46f8ecb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04faf939476aacb95",
            "owner_id": "754683575807",
            "tags": {
              "Name": "dev_infra2-vpc"
            },
            "tags_all": {
              "Name": "dev_infra2-vpc"
            }
          }
        }
      ]
    }
  ]
}